gitlab/k8s/gitlab-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: gitlab-runner
  name: gitlab-runner
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gitlab-runner
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: gitlab-runner
    spec:
      containers:
        - image: gitlab/gitlab-runner:alpine
          name: gitlab-runner
          resources: {}
      restartPolicy: Always
status: {}
